# first-docker-app-render

./: Dockerfile  README.md  dados_2.csv  main.py  pyproject.toml
