[tool.poetry]
name = "first-docker-app-render"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{include = "first_docker_app_render"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
